--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>It works!</title>
-</head>
-<body>
-	<h1>It does work!</h1>
-	<h2>Be proud of yourself!</h2>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+<style type="text/css">
+*{margin:0;padding:0;border:0;outline:0;}
+a{text-decoration:none;color:#000000;}
+body{background-color:#FAFAFA;margin:40px;color:#2C3E50;}
+ul{list-style:none;border-top:solid 1px #EEEEEE;}
+li,.lgd{border-bottom:solid 1px #EEEEEE;padding:10px;position:relative;font-family:'Lato',sans-serif;font-size:14px;}
+.lgd{border-bottom:none !important;}.lg{font-weight:normal !important;}.lgd p{text-align:center;font-weight:bold;}
+#header{display:inline-block;position:relative;width:100%;padding:30px 0;}
+#header p{position:relative;width:100%;font-size:23px;text-align:center;font-family:'Lato',sans-serif;font-style:italic;}
+.center{position:relative;width:750px;margin:30px auto 0;}
+.name{width:520px;display:inline-block;font-weight:bold;}
+.modified{width:130px;display:inline-block;text-align:center;}
+.size{width:70px;display:inline-block;text-align:center;}
+li:hover{background:#F7F7F7}
+</style><title>Index of localhost/</title></head><body>
+<div id="header"><p>Index of <b>localhost/</b></p></div>
+<div id="list"><div class="center">
+<div class="lgd">
+<p>DIRECTORIES</p>
+</div>
+<div class="lgd">
+	<div class="lg name"><span>Name</span></div>
+	<div class="lg modified"><span>Last Modified</span></div>
+	<div class="lg size"><span>Size</span></div>
+</div>
+
+<ul>
+
+	<a href="#">
+		<li>
+			<div class="name"><span>Parent Directory</span></div>
+			<div class="modified"><span>20:08</span></div>
+			<div class="size"><span>1000KB</span></div>
+		</li>
+	</a>
+
+
+	<a href="/folder"><li>
+		<div class="name"><span>folder/</span></div>
+		<div class="modified"><span>Yesterday</span></div>
+		<div class="size"><span>618B</span></div>
+	</li></a>
+</ul>
+
+
+<div class="lgd" style="margin-top:70px">
+<p>FILES</p>
+</div>
+<ul>
+	<a href="#"><li>
+		<div class="name"><span>text.txt</span></div>
+		<div class="modified"><span>20 Sep 2014</span></div>
+		<div class="size"><span>1MB</span></div>
+	</li></a>
+	<a href="/folder"><li>
+		<div class="name"><span>Relatório.pdf</span></div>
+		<div class="modified"><span>21 Oct 2013</span></div>
+		<div class="size"><span>19KB</span></div>
+	</li></a>
+</ul></div></div></body></html>
