--- a/default/505.html
+++ b/default/505.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
+<html lang="pt-BR"><head>
 	<meta charset="UTF-8">
 	<title>505 HTTP Version Not Supported</title>
+	<style type="text/css">
+	*{margin:0;border:0;padding:0;list-style:none;text-decoration:none;outline:0;}
+	body{color:#2C3E50;background:#FFFFFF;}
+	#header{display:inline-block;position:relative;width:100%;padding:30px 0;z-index:1000;}
+	#header p{text-align:center;font-family:'Lato', sans-serif;color:#CC0000;}
+	</style>
 </head>
 <body>
-	<h1>505</h1>
-	<h3>HTTP Version Not Supported</h3>
-</body>
-</html>
+	<div id="header">
+	<p style="font-size:120px;margin-top:150px">505</p>
+	<p style="font-size:40px;font-style:italic;">HTTP Version Not Supported</p>
+	
+	</div>
+	
+
+</body></html>
