--- a/www/post.html
+++ b/www/post.html
@@ -5,6 +5,7 @@
 	<title>Teste do POST</title>
 </head>
 <body>
+	<h3>Favor, checar a linha de comando!</h3><br>
 	<form action="/post.html" method="post">
 		<input type="text" name="text">
 		<input type="submit" name="button" value="Testar">
