--- a/default/404.html
+++ b/default/404.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
+<html lang="pt-BR"><head>
 	<meta charset="UTF-8">
-	<title>404 Not Found</title>
+	<title>HTTPd</title>
+	<style type="text/css">
+	*{margin:0;border:0;padding:0;list-style:none;text-decoration:none;outline:0;}
+	body{color:#2C3E50;background:#FFFFFF;}
+	#header{display:inline-block;position:relative;width:100%;padding:30px 0;z-index:1000;}
+	#header p{text-align:center;font-family:'Lato', sans-serif;color:#EE9900;}
+	</style>
 </head>
 <body>
-	<h1>404</h1>
-	<h3>Not Found</h3>
-</body>
-</html>
+	<div id="header">
+	<p style="font-size:120px;margin-top:150px">404</p>
+	<p style="font-size:40px;font-style:italic;">Not Found</p>
+	
+	</div>
+	
+
+</body></html>
