--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	<title>HTTPd</title>
+	<title>μHTTP</title>
 	<style type="text/css">
 	*{margin:0;border:0;padding:0;list-style:none;text-decoration:none;outline:0;}
 	body{color:#2C3E50;background:#FFFFFF;}
