--- a/default/501.html
+++ b/default/501.html
@@ -1,19 +1,19 @@
-<html lang="pt-BR"><head>
-	<meta charset="UTF-8">
-	<title>501 Not Implemented</title>
-	<style type="text/css">
-	*{margin:0;border:0;padding:0;list-style:none;text-decoration:none;outline:0;}
-	body{color:#2C3E50;background:#FFFFFF;}
-	#header{display:inline-block;position:relative;width:100%;padding:30px 0;z-index:1000;}
-	#header p{text-align:center;font-family:'Lato', sans-serif;color:#CC0000;}
-	</style>
-</head>
-<body>
-	<div id="header">
-	<p style="font-size:120px;margin-top:150px">501</p>
-	<p style="font-size:40px;font-style:italic;">Not Implemented</p>
-	
-	</div>
-	
-
-</body></html>
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
+		<meta charset="UTF-8">
+		<title>501 Not Implemented</title>
+		<style type="text/css">
+			* { margin: 0; border: 0; padding: 0; list-style: none; text-decoration: none; outline: 0; }
+			body { color: #2C3E50; background: #FFFFFF; }
+			#header { display: inline-block; position: relative; width: 100%; padding: 30px 0; z-index: 1000; }
+			#header p { text-align: center; font-family: 'Lato', sans-serif; color: #CC0000; }
+		</style>
+	</head>
+	<body>
+		<div id="header">
+			<p style="font-size:120px;margin-top:150px">501</p>
+			<p style="font-size:40px;font-style:italic;">Not Implemented</p>
+		</div>
+	</body>
+</html>
