Complete HTTP response implementation

--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8">
-	<title>μHTTP</title>
-	<style type="text/css">
-	*{margin:0;border:0;padding:0;list-style:none;text-decoration:none;outline:0;}
-	body{color:#2C3E50;background:#FFFFFF;}
-	#header{display:inline-block;position:relative;width:100%;padding:30px 0;z-index:1000;}
-	#header p{text-align:center;font-family:'Lato', sans-serif;color:#4B8A08;}
-	#footer{position:absolute;bottom:0;margin-bottom:10px;display:inline-block;width:100%;z-index:10;}
-	#footer p{text-align:center;}
-	</style>
-</head>
-<body>
-	<div id="header">
-	<p style="font-size:80px;font-style:italic;margin-top:120px">Jamais</p>
-	<p style="font-size:40px;font-style:italic;padding-top:30px;">esqueça de preservar</p>
-	<p style="font-size:40px;font-style:italic;">nosso planeta.</p>
-	</div>
-	<div id="footer"><p><img src="/img/grassball.jpg"></p>
-	</div>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>μHTTPd Webserver</title>
+		<style type="text/css">
+			* { margin: 0; border: 0; padding: 0; list-style: none; text-decoration: none; outline: 0; }
+			body { color: #2C3E50; background: #FFFFFF; }
+			#header {display: inline-block; position: relative; width: 100%; padding: 30px 0; z-index: 1000; }
+			#header p {text-align: center; font-family: 'Lato', sans-serif; color: #4B8A08; }
+			#footer {position: absolute; bottom: 0; margin-bottom: 10px; display: inline-block; width: 100%; z-index: 10; }
+			#footer p {text-align: center; }
+		</style>
+	</head>
+	<body>
+		<div id="header">
+			<p style="font-size: 80px;font-style:italic;margin-top:120px">μHTTPd</p>
+			<p style="font-size: 30px;font-style:italic;padding-top:30px;">Welcome</p>
+			<p style="font-size: 20px;font-style:italic;">Everything seems allright.</p>
+			<br>
+			<p><img src="/img/grassball.jpg"></p>
+		</div>
+	</body>
 </html>
