--- a/default/directory.html
+++ b/default/directory.html
@@ -17,8 +17,8 @@
             #header p { position: relative; width: 100%; font-size: 23px; text-align: center;
                         font-family: 'Lato',sans-serif; font-style: italic; }
             .center { position: relative; width: 750px; margin: 30px auto 0; }
-            .name { width: 520px; display: inline-block; font-weight: bold; }
-            .modified { width: 130px; display: inline-block; text-align: center; }
+            .name { width: 480px; display: inline-block; font-weight: bold; }
+            .modified { width: 160px; display: inline-block; text-align: center; }
             .size { width: 70px; display: inline-block; text-align: center; }
         </style>
         <title></title>
@@ -43,61 +43,72 @@
                         <span>Size</span>
                     </div>
                 </div>
-                <ul id="dir-listing"></ul>
+                <ul id="dir-listing-ul"></ul>
                 <div id="files-listing" class="lgd" style="margin-top: 70px">
                     <p>FILES</p>
                 </div>
-                <ul>
-
-                    <a href="">
-                        <li>
-                            <div class="name">
-                                <span></span>
-                            </div>
-                            <div class="modified">
-                                <span></span>
-                            </div>
-                            <div class="size">
-                                <span>-</span>
-                            </div>
-                        </li>
-                    </a>
-
-                </ul>
+                <ul id="file-list-ul"></ul>
             </div>
         </div>
     </body>
     <script type="text/javascript">
-        function show_contents({ name, dirs, files }) {
-            document.title = 'Index of ' + name;
-            document.getElementById("directory-name").innerHTML = name;
-            dirs.forEach(function ({name, modified, href}, i) {
-                var a = document.createElement("a");
-                a.href = href;
-                var li = document.createElement("li");
-                li.innerHTML = '<div class="name"><span>' + name + '</span></div>';
-                li.innerHTML += '<div class="modified"><span>' + modified + '</span></div>';
-                li.innerHTML += '<div class="size"><span> - </span></div>';
-                a.appendChild(li);
-                document.getElementById("dir-listing").appendChild(a);
-            });
+        function trimSlash(str) {
+            return str.replace(new RegExp("\/+$"), "");
         }
+
+        function formatModified(modified) {
+            var date = new Date(modified * 1000);
+            var months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dec'];
+            return months[date.getMonth()] + " " + date.getDate() + ", " + date.getFullYear() + " "
+                + date.toLocaleTimeString();
+        }
+
+        function formatSize(size) {
+            var magnitudes = ["", "KB", "MB", "GB", "TB", "PB", "EB", "ZB", "YB"];
+            var count = 0;
+
+            while (size > 1024) {
+                size /= 1024;
+                ++count;
+            }
+
+            return Math.floor(size) + magnitudes[count];
+        }
+        
+        function d(dirname, modified) {
+            if (dirname == '.')
+                return;
+
+            var a = document.createElement('a');
+            a.href = trimSlash(window.location.pathname) + '/' + dirname;
+            var li = document.createElement('li');
+            li.innerHTML  = '<div class="name"><span>'
+                + (dirname == '..' ? 'Parent Directory' : dirname)
+                + '</span></div>';
+            li.innerHTML += '<div class="modified"><span>' + formatModified(modified) + '</span></div>';
+            li.innerHTML += '<div class="size"><span>-</span></div>';
+            var ul = document.getElementById('dir-listing-ul');
+            a.appendChild(li);
+
+            if (dirname == '..') ul.prepend(a);
+            else ul.appendChild(a);
+        }
+
+        function f(filename, modified, size) {
+            var a = document.createElement('a');
+            a.href = trimSlash(window.location.pathname) + '/' + filename;
+            var li = document.createElement('li');
+            li.innerHTML  = '<div class="name"><span>' + filename + '</span></div>';
+            li.innerHTML += '<div class="modified"><span>' + formatModified(modified) + '</span></div>';
+            li.innerHTML += '<div class="size"><span>' + formatSize(size) + '</span></div>';
+            var ul = document.getElementById("file-list-ul");
+            a.appendChild(li);
+            ul.appendChild(a);
+        }
+
+        (function () {
+            document.title = "Index of " + window.location.pathname;
+            document.getElementById("directory-name").innerHTML = window.location.pathname;
+        })();
     </script>
 </html>
-<script type="text/javascript">
-    setName('/');
-    addDir('..', 'Today');
-    addFile('ts.txt', 'Yesterday', 4839);
-
-    show_contents({
-        'name': '/',
-        'dirs': [
-            {
-                'name': 'Parent Directory',
-                'modified': 'Today',
-                'href': '..',
-            },
-        ],
-        'files': [],
-    });
-</script>
